--- a/css/style.css
+++ b/css/style.css
@@ -115,7 +115,8 @@ header {
     margin: 0 auto; }
     .first-block__images--text {
       height: fit-content;
-      width: 30%; }
+      width: 30%;
+      padding: 0 30px; }
     .first-block__images--image {
       height: 100%;
       width: 30%;
@@ -202,7 +203,7 @@ header {
         transition: all ease-in-out .5s; }
 
 .third-block {
-  margin-bottom: 40px; }
+  margin-bottom: 80px; }
   .third-block__text {
     margin-bottom: 40px; }
   .third-block__images {
@@ -257,11 +258,22 @@ header {
     position: relative; }
     .bottom-block__image figure {
       width: 100%;
-      height: 840px; }
+      height: 840px;
+      position: relative; }
+      .bottom-block__image figure::before {
+        content: "";
+        width: 100%;
+        height: 100%;
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        background: linear-gradient(0deg, #0d0d0d 0%, rgba(13, 13, 13, 0.802959) 33%, rgba(13, 13, 13, 0) 100%);
+        z-index: 9; }
       .bottom-block__image figure img {
         width: 100%;
         height: 100%;
-        object-fit: contain; }
+        object-fit: cover;
+        object-position: top; }
     .bottom-block__image .image-description {
       position: absolute;
       opacity: 0;
@@ -297,7 +309,14 @@ header {
     font-family: "Montserrat", sans-serif;
     width: fit-content;
     height: fit-content;
-    padding: 10px; }
+    padding: 10px;
+    cursor: pointer;
+    transition: all ease-in-out .5s; }
+    .bottom-block .button-bio:hover {
+      background-color: #F2F2F0;
+      color: #0D0D0D;
+      font-weight: 500;
+      transition: all ease-in-out .5s; }
   .bottom-block__biograph {
     position: fixed;
     z-index: -9;
@@ -311,9 +330,18 @@ header {
     transition: all ease-in-out .5s; }
     .bottom-block__biograph .container {
       background-color: #F2F2F0;
-      padding: 80px; }
+      padding: 80px;
+      font-family: "Lato", sans-serif;
+      text-align: center;
+      line-height: 1.5; }
       .bottom-block__biograph .container h2 {
         color: #0D0D0D; }
+      .bottom-block__biograph .container h3 {
+        margin-top: 30px;
+        margin-bottom: 10px; }
+      .bottom-block__biograph .container .close {
+        text-align: right;
+        cursor: pointer; }
     .bottom-block__biograph.active {
       z-index: 999;
       opacity: 1;
