--- a/css/style.css
+++ b/css/style.css
@@ -58,20 +58,24 @@ header {
     position: absolute;
     width: fit-content;
     height: auto;
-    top: 90px;
+    top: 80px;
     left: 0;
     right: 0;
     margin: auto; }
     .top-content__title h1 {
       font-family: "Montserrat", sans-serif;
-      color: #F2F2F0;
+      color: #0D0D0D;
       text-align: center;
       font-size: 70px;
       font-weight: 500; }
+    .top-content__title p {
+      color: #0D0D0D;
+      font-weight: 600;
+      letter-spacing: 2px;
+      text-transform: uppercase; }
   .top-content__image {
     position: absolute;
-    bottom: 0;
-    top: 0;
+    top: 50px;
     left: 0;
     right: 0;
     margin: auto;
@@ -79,18 +83,37 @@ header {
     .top-content__image figure {
       width: 100%;
       height: 100%;
-      text-align: center; }
+      padding-top: 100px;
+      text-align: center;
+      position: relative; }
+      .top-content__image figure::after {
+        content: "";
+        width: 100%;
+        height: 20%;
+        position: absolute;
+        top: 0;
+        left: 0;
+        background: #ffffff; }
+      .top-content__image figure::before {
+        content: "";
+        width: 100%;
+        height: 50%;
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        background: linear-gradient(0deg, #0d0d0d 20%, rgba(13, 13, 13, 0.8) 33%, rgba(13, 13, 13, 0) 100%);
+        z-index: 9; }
       .top-content__image figure img {
-        width: 80%;
+        width: 100%;
         height: 100%;
-        object-fit: contain; }
+        object-fit: cover; }
   .top-content__description {
-    max-width: 640px;
+    max-width: 880px;
     position: absolute;
     left: 0;
     right: 0;
     margin: auto;
-    bottom: 20px; }
+    bottom: 0; }
     .top-content__description p {
       margin-bottom: 50px; }
   @media screen and (max-width: 520px) {
@@ -135,22 +158,19 @@ header {
 .first-block {
   margin-bottom: 80px; }
   .first-block .container {
-    margin-bottom: 80px; }
+    margin-bottom: 80px;
+    padding: 0 40px; }
   .first-block__images {
     display: flex;
     max-width: 1920px;
     width: 100%;
     height: 800px;
-    justify-content: space-between;
+    justify-content: space-evenly;
     align-items: center;
     margin: 0 auto; }
-    .first-block__images--text {
-      height: fit-content;
-      width: 30%;
-      padding: 0 30px; }
     .first-block__images--image {
       height: 100%;
-      width: 30%;
+      width: 45%;
       position: relative; }
       .first-block__images--image a {
         display: block;
