--- a/sass/component/_styles.scss
+++ b/sass/component/_styles.scss
@@ -27,22 +27,27 @@ header {
         position: absolute;
         width: fit-content;
         height: auto;
-        top: 90px;
+        top: 80px;
         left: 0;
         right: 0;
         margin: auto;
         h1 {
             font-family: $title_font;
-            color: $white;
+            color: $primary-color;
             text-align: center;
             font-size: 70px;
             font-weight: 500;
         }
+        p {
+            color: $primary-color;
+            font-weight: 600;
+            letter-spacing: 2px;
+            text-transform: uppercase;
+        }
     }
     &__image {
         position: absolute;
-        bottom: 0;
-        top: 0;
+        top: 50px;
         left: 0;
         right: 0;
         margin: auto;
@@ -50,21 +55,42 @@ header {
         figure {
             width: 100%;
             height: 100%;
+            padding-top: 100px;
             text-align: center;
+            position: relative;
+            &::after {
+                content: "";
+                width: 100%;
+                height: 20%;
+                position: absolute;
+                top: 0;
+                left: 0;
+                background: #ffffff;
+            }
+            &::before {
+                content: "";
+                width: 100%;
+                height: 50%;
+                position: absolute;
+                bottom: 0;
+                left: 0;
+                background: linear-gradient(0deg, rgba(13,13,13,1) 20%, rgba(13,13,13,0.8) 33%, rgba(13,13,13,0) 100%);
+                z-index: 9;
+            }
             img {
-                width: 80%;
+                width: 100%;
                 height: 100%;
-                object-fit: contain;
+                object-fit: cover;
             }
         }
     }
     &__description {
-        max-width: 640px;
+        max-width: 880px;
         position: absolute;
         left: 0;
         right: 0;
         margin: auto;
-        bottom: 20px;
+        bottom: 0;
         p {
             margin-bottom: 50px;
         }
@@ -129,23 +155,19 @@ header {
     margin-bottom: 80px;
     .container {
         margin-bottom: 80px;
+        padding: 0 40px;
     }
     &__images {
         display: flex;
         max-width: 1920px;
         width: 100%;
         height: 800px;
-        justify-content: space-between;
+        justify-content: space-evenly;
         align-items: center;
         margin: 0 auto;
-        &--text {
-            height: fit-content;
-            width: 30%;
-            padding: 0 30px;
-        }
         &--image {
             height: 100%;
-            width: 30%;
+            width: 45%;
             position: relative;
             a {
                 display: block;
