--- a/css/style.css
+++ b/css/style.css
@@ -395,8 +395,14 @@ header {
       background-color: #F2F2F0;
       padding: 80px;
       font-family: "Lato", sans-serif;
-      text-align: center;
+      text-align: justify;
       line-height: 1.5; }
+      .bottom-block__biograph .container figure {
+        width: 100%; }
+        .bottom-block__biograph .container figure img {
+          width: 100%;
+          height: 100%;
+          object-fit: contain; }
       .bottom-block__biograph .container h2 {
         color: #0D0D0D; }
       .bottom-block__biograph .container h3 {
