--- a/css/style.css
+++ b/css/style.css
@@ -61,7 +61,9 @@ header {
     top: 80px;
     left: 0;
     right: 0;
-    margin: auto; }
+    margin: auto;
+    pointer-events: none;
+    z-index: 2; }
     .top-content__title h1 {
       font-family: "Montserrat", sans-serif;
       color: #0D0D0D;
@@ -78,8 +80,7 @@ header {
     top: 50px;
     left: 0;
     right: 0;
-    margin: auto;
-    z-index: -9; }
+    margin: auto; }
     .top-content__image figure {
       width: 100%;
       height: 100%;
@@ -380,6 +381,12 @@ header {
       color: #0D0D0D;
       font-weight: 500;
       transition: all ease-in-out .5s; }
+  .bottom-block .close {
+    position: absolute;
+    right: 50px;
+    top: 50px;
+    text-align: right;
+    cursor: pointer; }
   .bottom-block__biograph {
     position: fixed;
     z-index: -9;
@@ -396,7 +403,8 @@ header {
       padding: 80px;
       font-family: "Lato", sans-serif;
       text-align: justify;
-      line-height: 1.5; }
+      line-height: 1.5;
+      position: relative; }
       .bottom-block__biograph .container figure {
         width: 100%; }
         .bottom-block__biograph .container figure img {
@@ -408,9 +416,6 @@ header {
       .bottom-block__biograph .container h3 {
         margin-top: 30px;
         margin-bottom: 10px; }
-      .bottom-block__biograph .container .close {
-        text-align: right;
-        cursor: pointer; }
     .bottom-block__biograph.active {
       z-index: 999;
       opacity: 1;
