--- a/sass/component/_styles.scss
+++ b/sass/component/_styles.scss
@@ -31,6 +31,8 @@ header {
         left: 0;
         right: 0;
         margin: auto;
+        pointer-events: none;
+        z-index: 2;
         h1 {
             font-family: $title_font;
             color: $primary-color;
@@ -51,7 +53,6 @@ header {
         left: 0;
         right: 0;
         margin: auto;
-        z-index: -9;
         figure {
             width: 100%;
             height: 100%;
@@ -431,6 +432,13 @@ header {
             transition: all ease-in-out .5s;
         }
     }
+    .close {
+        position: absolute;
+        right: 50px;
+        top: 50px;
+        text-align: right;
+        cursor: pointer;
+    }
     &__biograph {
         position: fixed;
         z-index: -9;
@@ -448,6 +456,7 @@ header {
             font-family: $text-font;
             text-align: justify;
             line-height: 1.5;
+            position: relative;
             figure {
                 width: 100%;
                 img {
@@ -462,10 +471,6 @@ header {
             h3 {
                 margin-top: 30px;
                 margin-bottom: 10px;
-            }
-            .close {
-                text-align: right;
-                cursor: pointer;
             }
         }
         &.active {
