--- a/sass/component/_styles.scss
+++ b/sass/component/_styles.scss
@@ -42,31 +42,33 @@ header {
         }
         p {
             color: $primary-color;
+            max-width: 800px;
+            margin: 0 auto;
             font-weight: 600;
-            letter-spacing: 2px;
-            text-transform: uppercase;
+            letter-spacing: 1px;
         }
     }
     &__image {
         position: absolute;
         top: 50px;
+        height: 100%;
         left: 0;
         right: 0;
         margin: auto;
         figure {
             width: 100%;
             height: 100%;
-            padding-top: 100px;
+            padding-top: 150px;
             text-align: center;
             position: relative;
             &::after {
                 content: "";
                 width: 100%;
-                height: 20%;
+                height: 250px;
                 position: absolute;
                 top: 0;
                 left: 0;
-                background: #ffffff;
+                background: linear-gradient(180deg, rgba(255,255,255,1) 40%, rgba(255,255,255,0.8029586834733894) 85%, rgba(255,255,255,0) 100%);
             }
             &::before {
                 content: "";
@@ -98,29 +100,35 @@ header {
     }
     @include mobile {
         &__title {
-            width: 85%;
-            top: 120px;
+            width: 90%;
+            top: 80px;
             h1 {
-                font-size: 50px;
+                font-size: 40px;
             }
         }
         &__image {
-            height: 70vh;
+            height: 100vh;
             figure {
+                padding-top: 250px;
                 img {
                     width: 100%;
                     object-fit: cover;
                 }
+                &::after {
+                    height: 375px;
+                }
             }
         }
         &__description {
-            padding: 0 40px;
+            padding: 0 35px;
         }
     }
     
 }
 .intro {
     margin-bottom: 80px;
+    position: relative;
+    z-index: 99;
     .container {
         margin-bottom: 50px;
     }
@@ -145,7 +153,7 @@ header {
     }
     @include mobile {
         .container {
-            padding: 0 40px;
+            padding: 0 35px;
         }
         &__image {
             height: 400px;
@@ -156,11 +164,11 @@ header {
     margin-bottom: 80px;
     .container {
         margin-bottom: 80px;
-        padding: 0 40px;
+        padding: 0 35px;
     }
     &__images {
         display: flex;
-        max-width: 1920px;
+        max-width: 1440px;
         width: 100%;
         height: 800px;
         justify-content: space-evenly;
@@ -208,7 +216,7 @@ header {
     }
     @include mobile {
         .container {
-            padding: 0 40px;
+            padding: 0 35px;
         }
         &__images {
             display: block;
@@ -274,7 +282,7 @@ header {
     }
     @include mobile {
         &__text {
-            padding: 0 40px;
+            padding: 0 35px;
         }
         &__images {
             display: block;
@@ -340,7 +348,7 @@ header {
     }
     @include mobile {
         &__text {
-            padding: 0 40px;
+            padding: 0 35px;
         }
         &__images {
             display: block;
@@ -525,6 +533,18 @@ footer {
             &:hover {
                 opacity: .5;
                 transition: all ease-in-out .5s;
+            }
+        }
+    }
+    @include mobile {
+        display: block;
+        .credits {
+            text-align: center;
+            margin-bottom: 40px;
+        }
+        .social {
+            a {
+                justify-content: center;
             }
         }
     }
