--- a/sass/component/_styles.scss
+++ b/sass/component/_styles.scss
@@ -18,6 +18,40 @@ header {
             }
         }
     }
+    @include mobile {
+        .social-buttons {
+            justify-content: center;
+        }
+    }
+}
+a {
+    &:has(.image-text) {
+        position: relative;
+        .image-text {
+            position: absolute;
+            opacity: 0;
+            left: 0;
+            right: 0;
+            top: 0;
+            bottom: 0;
+            margin: auto;
+            width: 80%;
+            height: fit-content;
+            font-family: $title_font;
+            line-height: 2;
+            text-align: center;
+            font-size: 20px;
+            color: $white;
+            z-index: 9;
+            transition: all ease-in-out .5s;
+        }
+        &:hover {
+            .image-text {
+                opacity: 1;
+                transition: all ease-in-out .5s;
+            }
+        }
+    }
 }
 .top-content {
     width: 100%;
@@ -360,7 +394,13 @@ header {
     }
 }
 .bottom-block {
-    margin-bottom: 150px;
+    margin-bottom: 100px;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    .btn {
+        margin: 0 30px;
+    }
     &__image {
         width: 100%;
         max-width: 1920px;
@@ -417,28 +457,9 @@ header {
             }
         }
     }
-    &__bio {
+    &__bio, .btn {
         display: flex;
         justify-content: center;
-    }
-    .button-bio {
-        background-color: transparent;
-        border: 1px solid $white;
-        text-align: center;
-        color: $white;
-        text-transform: uppercase;
-        font-family: $title-font;
-        width: fit-content;
-        height: fit-content;
-        padding: 10px;
-        cursor: pointer;
-        transition: all ease-in-out .5s;
-        &:hover {
-            background-color: $white;
-            color: $primary_color;
-            font-weight: 500;
-            transition: all ease-in-out .5s;
-        }
     }
     .close {
         position: absolute;
@@ -493,20 +514,51 @@ header {
         }
     }
     @include mobile {
+        display: block;
         .container {
             padding: 40px;
         }
+        .btn {
+            margin-bottom: 20px;
+        }
+        .contacto {
+            display: flex;
+            justify-content: center;
+        }
+    }
+}
+.btn {
+    background-color: transparent;
+    border: 1px solid $white;
+    display: block;
+    text-align: center;
+    color: $white;
+    text-transform: uppercase;
+    text-decoration: none;
+    font-family: $title-font;
+    width: fit-content;
+    height: fit-content;
+    padding: 10px;
+    cursor: pointer;
+    transition: all ease-in-out .5s;
+    &:hover {
+        background-color: $white;
+        color: $primary_color;
+        font-weight: 500;
+        transition: all ease-in-out .5s;
     }
 }
 footer {
     display: flex;
-    padding: 10px 50px 70px;
+    padding: 10px 50px 30px;
     justify-content: space-between;
     .credits {
         h3 {
             font-size: 12px;
             color: $white;
             line-height: 2;
+            letter-spacing: 2px;
+            font-weight: 100;
             font-family: $text-font;
         }
     }
