--- a/css/style.css
+++ b/css/style.css
@@ -23,7 +23,7 @@ body {
       body h2 {
         font-size: 30px; } }
   body .container {
-    max-width: 900px;
+    max-width: 1000px;
     margin: 0 auto; }
   body .lb-data .lb-caption {
     font-size: 13px;
@@ -68,7 +68,7 @@ a:has(.image-text) {
     font-family: "Montserrat", sans-serif;
     line-height: 2;
     text-align: center;
-    font-size: 20px;
+    font-size: 16px;
     color: #F2F2F0;
     z-index: 9;
     transition: all ease-in-out .5s; }
@@ -122,13 +122,14 @@ a:has(.image-text) {
         position: absolute;
         top: 0;
         left: 0;
-        background: linear-gradient(180deg, white 40%, rgba(255, 255, 255, 0.802959) 85%, rgba(255, 255, 255, 0) 100%); }
+        z-index: -9;
+        background: white; }
       .top-content__image figure::before {
         content: "";
         width: 100%;
         height: 50%;
         position: absolute;
-        bottom: 0;
+        bottom: -3px;
         left: 0;
         background: linear-gradient(0deg, #0d0d0d 20%, rgba(13, 13, 13, 0.8) 33%, rgba(13, 13, 13, 0) 100%);
         z-index: 9; }
@@ -313,6 +314,8 @@ a:has(.image-text) {
         width: 100%;
         height: 100%;
         position: relative; }
+        .third-block__images--image a .image-text {
+          font-size: 14px; }
         .third-block__images--image a::before {
           content: "";
           width: 100%;
@@ -359,6 +362,16 @@ a:has(.image-text) {
     max-width: 1920px;
     margin: 0 auto;
     position: relative; }
+    .bottom-block__image::after {
+      content: "";
+      width: 100%;
+      height: 100%;
+      position: absolute;
+      left: 0;
+      top: 0;
+      opacity: 0;
+      background-color: rgba(0, 0, 0, 0.8);
+      transition: all ease-in-out .5s; }
     .bottom-block__image figure {
       width: 100%;
       height: 840px;
@@ -370,6 +383,7 @@ a:has(.image-text) {
         position: absolute;
         bottom: 0;
         left: 0;
+        pointer-events: none;
         background: linear-gradient(0deg, #0d0d0d 0%, rgba(13, 13, 13, 0.802959) 33%, rgba(13, 13, 13, 0) 100%);
         z-index: 9; }
       .bottom-block__image figure img {
@@ -397,9 +411,34 @@ a:has(.image-text) {
           font-style: italic;
           font-size: 80%;
           margin-top: 30px; }
-    .bottom-block__image.active .image-description {
-      opacity: 1;
+    .bottom-block__image .image-text {
+      position: absolute;
+      opacity: 0;
+      left: 0;
+      right: 0;
+      top: 0;
+      bottom: 0;
+      margin: auto;
+      width: 80%;
+      height: fit-content;
+      font-family: "Montserrat", sans-serif;
+      line-height: 2;
+      text-align: center;
+      font-size: 20px;
+      color: #F2F2F0;
+      z-index: 99;
       transition: all ease-in-out .5s; }
+    .bottom-block__image.active {
+      position: relative; }
+      .bottom-block__image.active::after {
+        opacity: 1;
+        transition: all ease-in-out .5s; }
+      .bottom-block__image.active .image-text {
+        opacity: 1;
+        transition: all ease-in-out .5s; }
+      .bottom-block__image.active .image-description {
+        opacity: 1;
+        transition: all ease-in-out .5s; }
   .bottom-block__bio, .bottom-block .btn {
     display: flex;
     justify-content: center; }
@@ -480,38 +519,54 @@ a:has(.image-text) {
 
 footer {
   display: flex;
+  flex-wrap: wrap;
   padding: 10px 50px 30px;
+  max-width: 1200px;
+  margin: 0 auto;
   justify-content: space-between; }
-  footer .credits h3 {
-    font-size: 12px;
-    color: #F2F2F0;
-    line-height: 2;
-    letter-spacing: 2px;
-    font-weight: 100;
-    font-family: "Lato", sans-serif; }
-  footer .social a {
+  footer .credits {
+    width: 100%;
     display: flex;
-    color: #F2F2F0;
-    font-family: "Lato", sans-serif;
-    font-size: 12px;
-    text-decoration: none;
-    margin-bottom: 10px;
-    opacity: 1;
-    transition: all ease-in-out .5s; }
-    footer .social a figure {
-      width: 20px;
-      height: 20px;
-      margin-right: 10px; }
-      footer .social a figure img {
-        width: 100%;
-        height: 100%;
-        object-fit: contain; }
-    footer .social a:hover {
-      opacity: .5;
+    justify-content: space-between; }
+    footer .credits h3, footer .credits .year {
+      font-size: 12px;
+      color: #F2F2F0;
+      line-height: 2;
+      letter-spacing: 2px;
+      font-weight: 100;
+      font-family: "Lato", sans-serif; }
+    footer .credits .year {
+      width: 70px;
+      text-align: right; }
+  footer .social {
+    width: 100%;
+    margin-bottom: 30px; }
+    footer .social a {
+      display: flex;
+      color: #F2F2F0;
+      font-family: "Lato", sans-serif;
+      font-size: 16px;
+      text-decoration: none;
+      width: fit-content;
+      margin-bottom: 20px;
+      letter-spacing: 1px;
+      opacity: 1;
       transition: all ease-in-out .5s; }
+      footer .social a figure {
+        width: 20px;
+        height: 20px;
+        margin-right: 20px; }
+        footer .social a figure img {
+          width: 100%;
+          height: 100%;
+          object-fit: contain; }
+      footer .social a:hover {
+        opacity: .5;
+        transition: all ease-in-out .5s; }
   @media screen and (max-width: 520px) {
     footer {
-      display: block; }
+      display: block;
+      padding: 30px; }
       footer .credits {
         text-align: center;
         margin-bottom: 40px; }
