--- a/sass/component/_styles.scss
+++ b/sass/component/_styles.scss
@@ -40,7 +40,7 @@ a {
             font-family: $title_font;
             line-height: 2;
             text-align: center;
-            font-size: 20px;
+            font-size: 16px;
             color: $white;
             z-index: 9;
             transition: all ease-in-out .5s;
@@ -102,14 +102,15 @@ a {
                 position: absolute;
                 top: 0;
                 left: 0;
-                background: linear-gradient(180deg, rgba(255,255,255,1) 40%, rgba(255,255,255,0.8029586834733894) 85%, rgba(255,255,255,0) 100%);
+                z-index: -9;
+                background: white;
             }
             &::before {
                 content: "";
                 width: 100%;
                 height: 50%;
                 position: absolute;
-                bottom: 0;
+                bottom: -3px;
                 left: 0;
                 background: linear-gradient(0deg, rgba(13,13,13,1) 20%, rgba(13,13,13,0.8) 33%, rgba(13,13,13,0) 100%);
                 z-index: 9;
@@ -346,6 +347,9 @@ a {
                 width: 100%;
                 height: 100%;
                 position: relative;
+                .image-text {
+                    font-size: 14px;
+                }
                 &::before {
                     content: "";
                     width: 100%;
@@ -406,6 +410,17 @@ a {
         max-width: 1920px;
         margin: 0 auto;
         position: relative;
+        &::after {
+            content: "";
+            width: 100%;
+            height: 100%;
+            position: absolute;
+            left: 0;
+            top: 0;
+            opacity: 0;
+            background-color: rgba($color: #000000, $alpha: 0.8);
+            transition: all ease-in-out .5s;
+        }
         figure {
             width: 100%;
             height: 840px;
@@ -417,6 +432,7 @@ a {
                 position: absolute;
                 bottom: 0;
                 left: 0;
+                pointer-events: none;
                 background: linear-gradient(0deg, rgba(13,13,13,1) 0%, rgba(13,13,13,0.8029586834733894) 33%, rgba(13,13,13,0) 100%);
                 z-index: 9;
             }
@@ -450,7 +466,34 @@ a {
                 }
             }
         }
+        .image-text {
+            position: absolute;
+            opacity: 0;
+            left: 0;
+            right: 0;
+            top: 0;
+            bottom: 0;
+            margin: auto;
+            width: 80%;
+            height: fit-content;
+            font-family: $title_font;
+            line-height: 2;
+            text-align: center;
+            font-size: 20px;
+            color: $white;
+            z-index: 99;
+            transition: all ease-in-out .5s;
+        }
         &.active {
+            position: relative;
+            &::after {
+                opacity: 1;
+                transition: all ease-in-out .5s;
+            }
+            .image-text {
+                opacity: 1;
+                transition: all ease-in-out .5s;
+            }
             .image-description {
                 opacity: 1;
                 transition: all ease-in-out .5s;
@@ -550,10 +593,16 @@ a {
 }
 footer {
     display: flex;
+    flex-wrap: wrap;
     padding: 10px 50px 30px;
+    max-width: 1200px;
+    margin: 0 auto;
     justify-content: space-between;
     .credits {
-        h3 {
+        width: 100%;
+        display: flex;
+        justify-content: space-between;
+        h3, .year {
             font-size: 12px;
             color: $white;
             line-height: 2;
@@ -561,21 +610,29 @@ footer {
             font-weight: 100;
             font-family: $text-font;
         }
+        .year {
+            width: 70px;
+            text-align: right;
+        }
     }
     .social {
+        width: 100%;
+        margin-bottom: 30px;
         a {
             display: flex;
             color: $white;
             font-family: $text-font;
-            font-size: 12px;
+            font-size: 16px;
             text-decoration: none;
-            margin-bottom: 10px;
+            width: fit-content;
+            margin-bottom: 20px;
+            letter-spacing: 1px;
             opacity: 1;
             transition: all ease-in-out .5s;
             figure {
                 width: 20px;
                 height: 20px;
-                margin-right: 10px;
+                margin-right: 20px;
                 img {
                     width: 100%;
                     height: 100%;
@@ -590,6 +647,7 @@ footer {
     }
     @include mobile {
         display: block;
+        padding: 30px;
         .credits {
             text-align: center;
             margin-bottom: 40px;
